package com.hqbhoho.bigdata.design.pattern.proxy.cglib_dynatic_proxy;

/**
 * describe:
 *
 * @author hqbhoho
 * @version [v1.0]
 * @date 2019/12/02
 */
public class ChineseTeacher {
    public void teach() {
        System.out.println("现在开始上语文课...");
    }
}
