package com.hqbhoho.bigdata.design.pattern.proxy.static_proxy;

public interface Teacher {
    void teach();
}
